charts/directus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  namespace: directus
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/private-key-rotation-policy: "Never"
    cert-manager.io/revision-history-limit: "2147483647"
spec:
  ingressClassName: nginx
  rules:
    - host: admin.reefusion.lucas.engineering
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: directus
                port:
                  number: 80
  tls:
  - hosts:
    - admin.reefusion.lucas.engineering
    secretName: admin-reefusion-lucas-engineering-tls
